# Trading212Agent

./: .env.example  .gitignore  JIT_TESTING_IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  render.yaml
src/trading212_mcp/: __init__.py  client.py  config.py  errors.py  models.py  server.py
src/trading212_mcp/tools/: __init__.py  account.py  history.py  metadata.py  portfolio.py
tests/: test_client.py  test_config.py  test_server.py
