[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "trading212-mcp"
version = "0.1.0"
description = "MCP server for Trading 212 read-only workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "mcp>=1.6.0,<2.0.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.6,<1.0",
]

[project.scripts]
trading212-mcp = "trading212_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trading212_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
